--- a/organisms/lp-terms-ch_th.html
+++ b/organisms/lp-terms-ch_th.html
@@ -28,7 +28,7 @@
                     <div class="wu-lpterms__termitem"><span>2. </span><p>本次促销活动的推广方为Stratagile Pte Ltd（ “推广方”），地址为 PHRONG STRATAGILE CO., LTD, 149 MOO 4, KAELINE, KARTUMBAEN, SAMUTSAKHON 74110 , THAILAND22。Phrong Stratagile Co., Ltd 代表 Western Union 管理此促销活动，Western Union 对促销活动的任何方面均不承担任何责任。此计划完全由促销方管理。</p>
                     </div>
                     <!-- 3 -->
-                    <div class="wu-lpterms__termitem"><span>3. </span><p>此促销活动面向 18 岁及以上的泰国居民开放， 满足下文第 5 条 (“合格参与者”) 列出的促销要求。</p></div>
+                    <div class="wu-lpterms__termitem"><span>3. </span><p>3.	此促销活动面向 18 岁及以上的泰国居民开放， 满足下文第 5 条 (“合格参与者”) 列出的促销要求。</p></div>
                     <!-- 4 -->
                     <div class="wu-lpterms__termitem"><span>4. </span><p>此促销活动于 2024 年 12 月 15 日凌晨 12:00（曼谷时间）开始，并于2025 年3 月15日晚上 11:59（曼谷时间）结束（“促销期”）。 并且活动方有权延长促销时间。</p></div>
                     <!-- 5 -->
@@ -50,7 +50,9 @@
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p><span class="bld">单项奖：</span> 每位获奖者仅限赢得以上其中任意一张优惠券一次。</p>
+                                    <p><span class="bld">单项奖：</span> 每位获奖者仅限赢得以上其中任意一张优惠券一次。
+                                        
+                                        </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
@@ -121,7 +123,7 @@
                     </p>
                     </div> 
                     <!-- 16 -->
-                    <div class="wu-lpterms__termitem"><span>16. </span><p>如需进一步澄清或投诉，您可以联系Stratagile Pte Ltd（“（ “推广方”） 在： xxxxxxxxx （本地支持联系电话）</p>
+                    <div class="wu-lpterms__termitem"><span>16. </span><p>如需进一步澄清或投诉，您可以联系Stratagile Pte Ltd（“（ “推广方”） 在： Thai: 0640264198 English: 0991974616</p>
                     </div>
                     <!-- 17 -->
                     <div class="wu-lpterms__termitem"><span>17. </span><p>接受活动推广方提供的任何奖品、福利和/或优惠将被视为获奖者同意参加任何相关宣传，并同意使用其姓名、肖像、形象和/或声音用于广告和其他促销目的，无需任何补偿，除非适用法律另有禁止。</p>
