--- a/organisms/lp-terms-ph-th.html
+++ b/organisms/lp-terms-ph-th.html
@@ -19,7 +19,7 @@
      <div class="wu-lpterms">
         <div class="content-wrapper">
             <div class="wu-lpterms__container">
-                <h3 class="wu-title">TERMS AND CONDITIONS – KAMPANYA NG LOYALTY 2024</h3>
+                <h3 class="wu-title">"TERMS AND CONDITIONS – KAMPANYA NG LOYALTY 2024"</h3>
                 <div class="wu-lpterms__terms">
                     <!-- 1 -->
                     <div class="wu-lpterms__termitem"><span>1. </span><p>Ang impormasyon kung paano sumali at ang mga premyo ay bahagi ng mga Terms and Conditions na ito. Sa pagrehistro online, ang mga kalahok ay sumasang-ayon sa mga Terms and Conditions na ito.</p>
@@ -31,7 +31,7 @@
                     <div class="wu-lpterms__termitem"><span>3. </span><p>Ang promo ay bukas sa mga residente ng Thailand na may edad 18 pataas na tumutugon sa mga requirements ng promo na nakasaad sa clause 5 sa ibaba (“Eligible Participants”).
                     </p></div>
                     <!-- 4 -->
-                    <div class="wu-lpterms__termitem"><span>4. </span><p>4.	Ang Promosyon ay magsisimula sa 12:00am (oras ng Bangkok) sa 15th Dec 2024 at magtatapos sa 11:59pm (oras ng Bangkok) noong 15th March 2025 (“Promotion Period”) at maaaring palawigin ng Promoter.
+                    <div class="wu-lpterms__termitem"><span>4. </span><p>Ang Promosyon ay magsisimula sa 12:00am (oras ng Bangkok) sa 15th Dec 2024 at magtatapos sa 11:59pm (oras ng Bangkok) noong 15th March 2025 (“Promotion Period”) at maaaring palawigin ng Promoter.
                     </p></div>
                     <!-- 5 -->
                     <div class="wu-lpterms__termitem"><span>5. </span><p>Paano sumali: Magrehistro online at pumili ng nais na premyo (pumili ng isang uri lamang). Magpadala ng Western Union® Money Transfer na hindi bababa sa 10,000 THB mula sa anumang Western Union agents/partners sa retail locations o mobile banking o Western Union branded digital (wu.com at Western Union mobile app) sa Thailand papuntang Pilipinas, USA, China, India, at Vietnam sa loob ng Promotion Period.
@@ -62,7 +62,7 @@
                         </ul>
                      </div>
                      <!-- 7 -->
-                     <div class="wu-lpterms__termitem"><span>7. </span><p>Ang mga premyo ay hindi maaaring ipasa o i-convert sa cash. Para maklaim ang kanilang entry, ang isang Eligible Participant ay kailangang mag-login sa campaign page at ibigay ang mga sumusunod na impormasyon para magrehistro sa promo hanggang 15th March 2025.</p></div>
+                     <div class="wu-lpterms__termitem"><span>7. </span><p>Ang mga premyo ay hindi maaaring ipasa o i-convert sa cash. Para maklaim ang kanilang entry, ang isang Eligible Participant ay kailangang mag-login sa campaign page at ibigay ang mga sumusunod na impormasyon para magrehistro sa promo hanggang 15th March 2025..</p></div>
                      <!-- list -->
                      <div class="wu-lpterms__termlistb">
                         <ul>
@@ -72,7 +72,7 @@
                             <li class="wu-lpterms__termlistitmb">(c) Email Address</li>
                             <li class="wu-lpterms__termlistitmb">(d) Petsa ng transaction</li>
                             <li class="wu-lpterms__termlistitmb">(e) Kung saang bansa ipinadala ang remittance</li>
-                            <li class="wu-lpterms__termlistitmb">(f) 10 digits of the MTCN</li>
+                            <li class="wu-lpterms__termlistitmb">(f) 10 digits of the MTCN </li>
                         </ul>
                     </div>
                      <!-- 8 -->
@@ -110,7 +110,7 @@
                         </ul>
                      </div>
                       <!-- 11 -->
-                      <div class="wu-lpterms__termitem"><span>11. </span><p>Ang alok ay valid hangga’t may stocks at valid lamang sa loob ng Promotion Period. Ang mga premyo ay ibinibigay ng isang third-party provider, ayon sa kani-kanilang mga terms and conditions  (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) ng product warranty, na kung saan ang Promoter ay walang pananagutan.
+                      <div class="wu-lpterms__termitem"><span>11. </span><p>Ang alok ay valid hangga’t may stocks at valid lamang sa loob ng Promotion Period. Ang mga premyo ay ibinibigay ng isang third-party provider, ayon sa kani-kanilang mga terms and conditions   (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) ng product warranty, na kung saan ang Promoter ay walang pananagutan.
                       </p>
                     </div>
                      <!-- 12 -->
@@ -130,7 +130,7 @@
                     </p>
                     </div> 
                     <!-- 16 -->
-                    <div class="wu-lpterms__termitem"><span>16. </span><p>Para sa karagdagang paglilinaw at reklamo, maaari kayong makipag-ugnayan sa Stratagile Pte Ltd (“Promoter”) sa: xxxxxxxxx (Local support contact number)
+                    <div class="wu-lpterms__termitem"><span>16. </span><p>Para sa karagdagang paglilinaw at reklamo, maaari kayong makipag-ugnayan sa Stratagile Pte Ltd (“Promoter”) sa: Thai: 0640264198 English: 0991974616
                     </p>
                     </div>
                     <!-- 17 -->
@@ -142,7 +142,7 @@
                     </p>
                     </div>
                      <!-- 19 -->
-                     <div class="wu-lpterms__termitem"><span>19. </span><p>19.	Ang promosyon ay sumusunod sa lahat ng naaangkop na batas at regulasyon laban sa suhol at korapsyon.
+                     <div class="wu-lpterms__termitem"><span>19. </span><p>Ang promosyon ay sumusunod sa lahat ng naaangkop na batas at regulasyon laban sa suhol at korapsyon.
                         © 2024 Stratagile Pte Ltd All Rights Reserved.
                         
                     </p>
