--- a/organisms/lp-terms-thai.html
+++ b/organisms/lp-terms-thai.html
@@ -26,7 +26,7 @@
                     </div>
                     <!-- 2 -->
                     <div class="wu-lpterms__termitem"><span>2. </span><p>ผู้จัดโปรโมชันนี้คือ Stratagile Pte Ltd (“ผู้จัดโปรโมชัน”) ที่อยู่ บริษัท ฟรองค์ สแทรทแอจไจล์ จำกัด 149 หมู่ 4 ตำบลแคราย อำเภอกระทุ่มแบน จังหวักสมุทรสาคร 74110 บริษัท ฟรองค์ สแทรทแอจไจล์ จำกัด 
-                        เป็นผู้จัดการโปรโมชั่นนี้ในนามของ Western Union และ Western Union จะไม่รับผิดชอบต่อส่วนใดๆ ของโปรโมชั่นนี้ โปรแกรมนี้ได้รับการจัดการโดยผู้จัดโปรโมชั่นโดยสมบูรณ์
+                        เป็นผู้จัดการโปรโมชั่นนี้ในนามของ Western Union และ Western Union จะไม่รับผิดชอบต่อส่วนใดๆ ของโปรโมชั่นนี้ โปรแกรมนี้ได้รับการจัดการโดยผู้จัดโปรโมชั่นโดยสมบูรณ์                       
                         </p>
                     </div>
                     <!-- 3 -->
@@ -43,14 +43,14 @@
                             <li class="wu-lpterms__termlistitm">
                                 <div>
                                     <p>บัตรกำนัล Grab มูลค่า 100 บาท ลูกค้า 800 คนแรกที่ทำธุรกรรมที่เข้าเงื่อนไขครบ 1 รายการ 
-                                        จะได้รับ บัตรกำนัล Grab มูลค่า 100 บาท จำนวน 1 ใบ บัตรกำนัล 1 รางวัลต่อลูกค้า 1 ท่าน
+                                        จะได้รับ บัตรกำนัล Grab มูลค่า 100 บาท จำนวน 1 ใบ บัตรกำนัล 1 รางวัลต่อลูกค้า 1 ท่าน                                        
                                         </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
                                     <p>บัตรกำนัล Grab มูลค่า 300 บาท ลูกค้า 800 คนแรกที่ทำธุรกรรมที่เข้าเงื่อนไขครบ 2 รายการ
-                                        จะได้รับบัตรกำนัล Grab มูลค่า 300 บาท จำนวน 1 ใบ บัตรกำนัล 1 รางวัลต่อลูกค้า 1 ท่าน
+                                        จะได้รับบัตรกำนัล Grab มูลค่า 300 บาท จำนวน 1 ใบ บัตรกำนัล 1 รางวัลต่อลูกค้า 1 ท่าน                                        
                                         </p>
                                 </div>
                             </li>
@@ -63,7 +63,7 @@
                      </div>
                      <!-- 7 -->
                      <div class="wu-lpterms__termitem"><span>7. </span><p>รางวัลไม่สามารถโอนหรือเปลี่ยนเป็นเงินสดได้ เพื่อขอรับสิทธิ์เข้าร่วม ผู้เข้าร่วมที่มีสิทธิ์ต้องเข้าสู่ระบบ 
-                        หน้าแคมเปญ และให้ข้อมูลต่อไปนี้เพื่อลงทะเบียนเข้าร่วมโปรโมชั่นจนถึง วัน ที่ 15 มีนาคม 2568
+                        หน้าแคมเปญ และให้ข้อมูลต่อไปนี้เพื่อลงทะเบียนเข้าร่วมโปรโมชั่นจนถึง วัน ที่ 15 มีนาคม 2568                        
                         </p></div>
                      <!-- list -->
                      <div class="wu-lpterms__termlistb">
@@ -91,14 +91,14 @@
                             <li class="wu-lpterms__termlistitm">
                                 <div>
                                     <p>ผู้โชคดีจำนวน 800 คน ที่ได้รับ บัตรกำนัล Grab มูลค่า 100 บาท จะถูกคัดเลือกตามลำดับ
-                                        วันที่ทำรายการ ครั้งแรก
+                                        วันที่ทำรายการ ครั้งแรก                                        
                                         </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
                                     <p>ผู้โชคดีจำนวน 800 คน ที่ได้รับ บัตรกำนัล Grab มูลค่า 300 บาท จะถูกคัดเลือกตามลำดับ
-                                        วันที่ ทำธุรกรรม ครั้งที่ 2
+                                        วันที่ ทำธุรกรรม ครั้งที่ 2                                        
                                         </p>
                                 </div>
                             </li>
@@ -110,13 +110,13 @@
                         </ul>
                      </div>
                       <!-- 11 -->
-                      <div class="wu-lpterms__termitem"><span>11. </span><p>ข้อเสนอมีผลจนกว่าสินค้าจะหมดและมีผลตลอดช่วงระยะเวลาโปรโมชั่น รางวัลจะมอบให้โดยผู้ให้บริการบุคคลที่สาม โดยต้องเป็นไปตามข้อกำหนดและเงื่อนไข การรับประกันสินค้า (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) ที่เกี่ยวข้อง ซึ่งผู้จัดโปรโมชั่นจะไม่รับผิดชอบใดๆ ทั้งสิ้น</p>
+                      <div class="wu-lpterms__termitem"><span>11. </span><p>ข้อเสนอมีผลจนกว่าสินค้าจะหมดและมีผลตลอดช่วงระยะเวลาโปรโมชั่น รางวัลจะมอบให้โดยผู้ให้บริการบุคคลที่สาม โดยต้องเป็นไปตามข้อกำหนดและเงื่อนไข การรับประกันสินค้า  (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) ที่เกี่ยวข้อง ซึ่งผู้จัดโปรโมชั่นจะไม่รับผิดชอบใดๆ ทั้งสิ้น</p>
                     </div>
                      <!-- 12 -->
                      <div class="wu-lpterms__termitem"><span>12. </span><p>ผู้ชนะจะต้องรับผิดชอบภาษีใดๆ ที่เกิดขึ้นจากการได้รับรางวัล รางวัลดังกล่าวจัดทำโดยบุคคลภายนอก และต้องรับผิดชอบต่อเรื่องใดๆ ที่เกิดขึ้นเกี่ยวข้องกับรางวัล บริการ หรือข้อมูลที่บุคคลภายนอกให้ไว้ ซึ่งผู้จัดงานจะไม่มีความรับผิดใดๆ ทั้งสิ้น คำถามหรือข้อร้องเรียนใดๆ เกี่ยวกับรางวัล บริการ หรือข้อมูล สามารถสอบถามผู้ให้บริการรางวัลได้โดยตรง ผู้จัดงานจะไม่รับผิดชอบต่อรางวัลที่ไม่เป็นไปตามความคาดหวังของผู้ชนะ และต่อคุณภาพและความพร้อมใช้งานของรางวัล บริการ และข้อมูลที่ผู้ให้บริการรางวัลที่ให้ไว้ และผู้ให้บริการรางวัลจะไม่รับผิดใดๆ ที่เกี่ยวข้องกับโปรโมชั่นเมื่อผู้ชนะได้รับประโยชน์ใดๆ ที่เกี่ยวข้องกับโปรโมชั่นในขอบเขตตามที่ที่กฎหมายอนุญาต</p>
                     </div>
                      <!-- 13 -->
-                     <div class="wu-lpterms__termitem"><span>13. </span><p>หากโปรโมชั่นนี้มีเหตุสุดวิสัยในทางใดทางหนึ่งหรือไม่สามารถดำเนินการได้ตามที่คาดไว้เนื่องจากเหตุผลใดๆ ที่อยู่นอกเหนือการควบคุมที่สมเหตุสมผลของผู้จัดโปรโมชั่น รวมถึงแต่ไม่จำกัดเพียงปัญหาทางเทคนิคหรือความล้มเหลว การแทรกแซงหรือการฉ้อโกงที่ไม่ได้รับอนุญาต การทำลายล้าง ไฟฟ้าดับ ภัยธรรมชาติ เหตุสุดวิสัย ความไม่สงบทางการเมือง การหยุดงาน การติดไวรัสคอมพิวเตอร์ ข้อบกพร่อง การดัดแปลง การแทรกแซงที่ไม่ได้รับอนุญาต การฉ้อโกง หรือสาเหตุอื่นใดที่อยู่นอกเหนือการควบคุมของผู้จัดโปรโมชั่น ซึ่งทำให้เกิดการทุจริตหรือส่งผลต่อการบริหาร ความปลอดภัย ความเป็นธรรม ความสมบูรณ์ หรือการดำเนินการที่เหมาะสมของโปรโมชั่นนี้ ผู้จัดโปรโมชั่นขอสงวนสิทธิ์ในการตัดสินใจเพียงฝ่ายเดียวในขอบเขตตามที่กฎหมายอนุญาต (ก) ตัดสิทธิ์ผู้เข้าร่วมที่มีสิทธิ์ทุกคน หรือ (ข) แก้ไข ระงับ ยุติ หรือยกเลิกโปรโมชั่นตามคำสั่งเป็นลายลักษณ์อักษรจากหน่วยงานกำกับดูแล ตามความเหมาะสมเพื่อให้มีผลบังคับใช้เท่าที่เป็นไปได้อย่างสมเหตุสมผลตามเจตนาเดิมของโปรโมชั่นนี้</p>
+                     <div class="wu-lpterms__termitem"><span>13. </span><p> หากโปรโมชั่นนี้มีเหตุสุดวิสัยในทางใดทางหนึ่งหรือไม่สามารถดำเนินการได้ตามที่คาดไว้เนื่องจากเหตุผลใดๆ ที่อยู่นอกเหนือการควบคุมที่สมเหตุสมผลของผู้จัดโปรโมชั่น รวมถึงแต่ไม่จำกัดเพียงปัญหาทางเทคนิคหรือความล้มเหลว การแทรกแซงหรือการฉ้อโกงที่ไม่ได้รับอนุญาต การทำลายล้าง ไฟฟ้าดับ ภัยธรรมชาติ เหตุสุดวิสัย ความไม่สงบทางการเมือง การหยุดงาน การติดไวรัสคอมพิวเตอร์ ข้อบกพร่อง การดัดแปลง การแทรกแซงที่ไม่ได้รับอนุญาต การฉ้อโกง หรือสาเหตุอื่นใดที่อยู่นอกเหนือการควบคุมของผู้จัดโปรโมชั่น ซึ่งทำให้เกิดการทุจริตหรือส่งผลต่อการบริหาร ความปลอดภัย ความเป็นธรรม ความสมบูรณ์ หรือการดำเนินการที่เหมาะสมของโปรโมชั่นนี้ ผู้จัดโปรโมชั่นขอสงวนสิทธิ์ในการตัดสินใจเพียงฝ่ายเดียวในขอบเขตตามที่กฎหมายอนุญาต (ก) ตัดสิทธิ์ผู้เข้าร่วมที่มีสิทธิ์ทุกคน หรือ (ข) แก้ไข ระงับ ยุติ หรือยกเลิกโปรโมชั่นตามคำสั่งเป็นลายลักษณ์อักษรจากหน่วยงานกำกับดูแล ตามความเหมาะสมเพื่อให้มีผลบังคับใช้เท่าที่เป็นไปได้อย่างสมเหตุสมผลตามเจตนาเดิมของโปรโมชั่นนี้</p>
                     </div>
                     <!-- 14 -->
                     <div class="wu-lpterms__termitem"><span>14. </span><p>ภายใต้กฎหมายที่บังคับใช้ซึ่งไม่สามารถยกเว้นได้ ผู้จัดโปรโมชั่นและองค์กรที่เกี่ยวข้องและตัวแทนที่เกี่ยวข้องกับโปรโมชันนี้จะไม่รับผิดชอบต่อการสูญเสีย ความเสียหาย หรือการกระทำใดๆ ที่เกิดขึ้นกับบุคคลใดๆ (รวมถึงแต่ไม่จำกัดการสูญเสียโดยตรงหรือโดยอ้อม การสูญเสียที่เป็นผลสืบเนื่อง หรือการสูญเสียที่เกิดจากการประมาทเลินเล่อ) ที่เกิดขึ้นโดยตรงหรือโดยอ้อมจากโปรโมชั่นนี้หรือรางวัลใดๆ ที่มอบให้เป็นส่วนหนึ่งของโปรโมชั่นนี้</p>
@@ -131,7 +131,7 @@
                     <div class="wu-lpterms__termitem"><span>17. </span><p>การยอมรับรางวัล สิทธิประโยชน์ หรือข้อเสนอใดๆ ที่มอบให้โดยผู้จัดแคมเปญ ถือเป็นการยินยอมของผู้ชนะในการเข้าร่วมในงานประชาสัมพันธ์ใดๆ ที่เกี่ยวข้อง และใช้ชื่อ รูปลักษณ์ รูปภาพ หรือเสียง เพื่อการโฆษณาและวัตถุประสงค์ส่งเสริมการขายอื่นๆ โดยไม่ได้รับค่าตอบแทน เว้นแต่จะมีการห้ามไว้เป็นอย่างอื่นโดยกฎหมายที่เกี่ยวข้อง</p>
                     </div>
                      <!-- 18 -->
-                     <div class="wu-lpterms__termitem"><span>18. </span><p>Stratagile จะเก็บรายละเอียด ไว้ในฐานข้อมูลที่ปลอดภัย (โฮสต์โดย AWS) ข้อมูลของลูกค้าจะไม่ถูกใช้เพื่อวัตถุประสงค์ใดๆ ยกเว้นการคัดเลือกผู้ชนะ และจะไม่ถูกแบ่งปันด้วยเช่นกัน หากลูกค้าเลือกไม่รับบริการ เราจะลบข้อมูลที่ไม่มีประวัติอย่างถาวร เราจะส่งข้อมูลดังกล่าวให้กับ Western Union เพื่อวัตถุประสงค์ในการตรวจยืนยันธุรกรรม และเราจะลบข้อมูลดังกล่าวเมื่อสิ้นสุดระยะเวลาโปรโมชั่น เราจะโพสต์คำชี้แจงความเป็นส่วนตัวออนไลน์โดยละเอียดและข้อกำหนดและเงื่อนไขแนบไว้กับลิงก์์</p>
+                     <div class="wu-lpterms__termitem"><span>18. </span><p>Stratagile จะเก็บรายละเอียด ไว้ในฐานข้อมูลที่ปลอดภัย (โฮสต์โดย AWS) ข้อมูลของลูกค้าจะไม่ถูกใช้เพื่อวัตถุประสงค์ใดๆ ยกเว้นการคัดเลือกผู้ชนะ และจะไม่ถูกแบ่งปันด้วยเช่นกัน หากลูกค้าเลือกไม่รับบริการ เราจะลบข้อมูลที่ไม่มีประวัติอย่างถาวร เราจะส่งข้อมูลดังกล่าวให้กับ Western Union เพื่อวัตถุประสงค์ในการตรวจยืนยันธุรกรรม และเราจะลบข้อมูลดังกล่าวเมื่อสิ้นสุดระยะเวลาโปรโมชั่น เราจะโพสต์คำชี้แจงความเป็นส่วนตัวออนไลน์โดยละเอียดและข้อกำหนดและเงื่อนไขแนบไว้กับลิงก์</p>
                     </div>
                      <!-- 19 -->
                      <div class="wu-lpterms__termitem"><span>19. </span><p>โปรโมชั่นนี้สอดคล้องกับกฎหมายและข้อบังคับต่อต้านการติดสินบนและการทุจริตที่เกี่ยวข้องทั้งหมด
