--- a/organisms/lp-terms-vn.html
+++ b/organisms/lp-terms-vn.html
@@ -19,7 +19,7 @@
      <div class="wu-lpterms">
         <div class="content-wrapper">
             <div class="wu-lpterms__container">
-                <h3 class="wu-title">ĐIỀU KHOẢN VÀ ĐIỀU KIỆN</h3>
+                <h3 class="wu-title">ĐIỀrrrrrU KHOẢN VÀ ĐIỀU KIỆN – CHIẾN DỊCH KHÁCH HÀNG THÂN THIẾT 2024 </h3>
                 <div class="wu-lpterms__terms">
                     <!-- 1 -->
                     <div class="wu-lpterms__termitem"><span>1. </span><p>Thông tin về cách tham gia và giải thưởng là một phần của các Điều khoản và Điều kiện này. Bằng cách đăng ký trực tuyến, người tham gia đồng ý với các Điều khoản và Điều kiện này.</p>
@@ -32,25 +32,25 @@
                     <!-- 4 -->
                     <div class="wu-lpterms__termitem"><span>4. </span><p>Chương trình khuyến mãi này bắt đầu lúc 12:00 sáng (giờ Bangkok) ngày 15 tháng 12 năm 2024 và kết thúc vào 11:59 tối (giờ Bangkok) ngày 15 tháng 3 năm 2025 ("Thời gian khuyến mãi"), và có thể được Ban tổ chức gia hạn.</p></div>
                     <!-- 5 -->
-                    <div class="wu-lpterms__termitem"><span>5. </span><p>Cách tham gia: Đăng ký trực tuyến  và chọn giải thưởng mong muốn (chỉ chọn một loại). Gửi thành công Chuyển tiền Western Union® với số tiền ít nhất 10.000 THB từ bất kỳ đại lý/đối tác nào của Western Union tại các địa điểm bán lẻ hoặc ngân hàng di động hoặc kỹ thuật số mang thương hiệu Western Union (wu.com và ứng dụng di động Western Union) tại Thái Lan đến Philippines, Hoa Kỳ, Trung Quốc, Ấn Độ và Việt Nam trong Thời gian khuyến mãi.</p></div>
+                    <div class="wu-lpterms__termitem"><span>5. </span><p>Cách tham gia: Đăng ký trực tuyến  và chọn giải thưởng mong muốn (chỉ chọn một loại). Gửi thành công Chuyển tiền Western Union® với số tiền ít nhất 10.000 THB từ bất kỳ đại lý/đối tác nào của Western Union tại các địa điểm bán lẻ hoặc ngân hàng di động hoặc kỹ thuật số mang thương hiệu Western Union (wu.com và ứng dụng di động Western Union) tại Thái Lan đến Philippines, Hoa Kỳ, Trung Quốc, Ấn Độ và Việt Nam trong Thời gian khuyến mãi. </p></div>
                     <!-- 6 -->
-                    <div class="wu-lpterms__termitem"><span>6. </span><p>Giải thưởng:</p></div>
+                    <div class="wu-lpterms__termitem"><span>6. </span><p>Giải thưởng: </p></div>
                     <!-- list a  -->
                     <div class="wu-lpterms__termlista">
                         <ul>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p><span class="bld">Voucher Grab 100 THB:</span> 800 khách hàng đầu tiên hoàn thành hai giao dịch đủ điều kiện có thể nhận được một (1) voucher Grab 300 THB  , với một chiến thắng cho mỗi khách hàng.</p>
+                                    <p><span class="bld">Voucher Grab 100 THB: </span> 800 khách hàng đầu tiên hoàn thành một giao dịch đủ điều kiện có thể nhận được một (1) voucher Grab trị giá 100 THB, với một chiến thắng cho mỗi khách hàng. </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p<span class="bld">Voucher Grab 300 THB:</span> 800 khách hàng đầu tiên hoàn thành hai giao dịch đủ điều kiện có thể nhận được một (1) voucher Grab 300 THB  , với một chiến thắng cho mỗi khách hàng.</p>
+                                    <p<span class="bld">Voucher Grab 300 THB:</span> 800 khách hàng đầu tiên hoàn thành hai giao dịch đủ điều kiện có thể nhận được một (1) voucher Grab 300 THB  , với một chiến thắng cho mỗi khách hàng. </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p><span class="bld">Giải đơn:</span> Khách hàng chỉ có thể giành được một trong hai voucher một lần.</p>
+                                    <p><span class="bld">Giải đơn:</span> Khách hàng chỉ có thể giành được một trong hai voucher một lần. </p>
                                 </div>
                             </li>   
                         </ul>
@@ -63,9 +63,9 @@
                             <li class="wu-lpterms__termlistitmb">(a) Tên (do người gửi cung cấp và được ghi trong ID),</li>
                             <li class="wu-lpterms__termlistitmb">(b) Số điện thoại di động</li>
                             <li class="wu-lpterms__termlistitmb">(c) Địa chỉ email</li>
-                            <li class="wu-lpterms__termlistitmb">(d) Ngày giao dịch được thực hiện</li>
+                            <li class="wu-lpterms__termlistitmb">(d) Ngày giao dịch được thực hiện/li>
                             <li class="wu-lpterms__termlistitmb">(e) Chuyển tiền được gửi đến quốc gia nào</li>
-                            <li class="wu-lpterms__termlistitmb">(f) 10 chữ số của MTCN</li>
+                            <li class="wu-lpterms__termlistitmb">(f) 10 chữ số của MTCN </li>
                         </ul>
                     </div>
                      <!-- 8 -->
@@ -82,12 +82,12 @@
                         <ul>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>800 người chiến thắng với  voucher Grab trị giá 100 THB sẽ được chọn theo trình tự ngày giao  dịch đầu tiên.</p>
+                                    <p>800 người chiến thắng với  voucher Grab trị giá 100 THB sẽ được chọn theo trình tự ngày giao  dịch đầu tiên.  </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>800 người chiến thắng với voucher Grab trị giá 300 THB  sẽ được chọn theo trình tự ngày giao dịch thứ 2.</p>
+                                    <p>800 người chiến thắng với voucher Grab trị giá 300 THB  sẽ được chọn theo trình tự ngày giao dịch thứ 2. </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
@@ -98,7 +98,7 @@
                         </ul>
                      </div>
                       <!-- 11 -->
-                      <div class="wu-lpterms__termitem"><span>11. </span><p>Ưu đãi có hiệu lực cho đến khi hết hàng và có hiệu lực trong Thời gian khuyến mãi. Giải thưởng được cung cấp bởi nhà cung cấp bên thứ ba, tuân theo các điều khoản và điều kiện tương ứng (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) của bảo hành sản phẩm, liên quan đến việc Ban tổ chức sẽ không có bất kỳ trách nhiệm pháp lý nào.</p>
+                      <div class="wu-lpterms__termitem"><span>11. </span><p>Ưu đãi có hiệu lực cho đến khi hết hàng và có hiệu lực trong Thời gian khuyến mãi. Giải thưởng được cung cấp bởi nhà cung cấp bên thứ ba, tuân theo các điều khoản và điều kiện tương ứng  (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) của bảo hành sản phẩm, liên quan đến việc Ban tổ chức sẽ không có bất kỳ trách nhiệm pháp lý nào.</p>
                     </div>
                      <!-- 12 -->
                      <div class="wu-lpterms__termitem"><span>12. </span><p>Người chiến thắng phải chịu trách nhiệm về bất kỳ khoản thuế nào phát sinh khi trúng thưởng. Giải thưởng được cung cấp bởi bên thứ ba và sẽ chịu trách nhiệm về bất kỳ vấn đề nào phát sinh từ hoặc liên quan đến giải thưởng, dịch vụ và/hoặc thông tin mà Ban tổ chức sẽ không có bất kỳ trách nhiệm pháp lý nào. Mọi thắc mắc hoặc khiếu nại liên quan đến giải thưởng, dịch vụ và/hoặc thông tin phải được chuyển đến bên thứ ba. Ban tổ chức sẽ không chịu trách nhiệm về các giải thưởng không đạt được kỳ vọng của người chiến thắng và chất lượng và tính sẵn có của giải thưởng, dịch vụ và thông tin do nhà cung cấp bên thứ ba cung cấp, và loại trừ trách nhiệm pháp lý liên quan đến Chương trình khuyến mãi khi (các) người chiến thắng được hưởng bất kỳ lợi ích nào liên quan đến Chương trình khuyến mãi trong phạm vi đầy đủ được pháp luật cho phép.</p>
@@ -123,7 +123,9 @@
                      <div class="wu-lpterms__termitem"><span>18. </span><p>Stratagile sẽ giữ các chi tiết trong cơ sở dữ liệu an toàn (do AWS lưu trữ). Dữ liệu khách hàng sẽ không được sử dụng cho bất kỳ mục đích nào ngoại trừ việc lựa chọn người chiến thắng và cũng sẽ không được chia sẻ. Nếu khách hàng chọn không tham gia, chúng tôi sẽ xóa vĩnh viễn bản ghi không có lịch sử. Chúng tôi sẽ bàn giao dữ liệu cho Western Union cho mục đích xác minh giao dịch và chúng tôi sẽ xóa dữ liệu vào cuối giai đoạn thí điểm. Chúng tôi sẽ đăng một tuyên bố chi tiết về quyền riêng tư trực tuyến và Điều khoản và Điều kiện đính kèm với liên kết.</p>
                     </div>
                      <!-- 19 -->
-                     <div class="wu-lpterms__termitem"><span>19. </span><p>Chương trình khuyến mãi tuân thủ tất cả các luật và quy định hiện hành về chống hối lộ và tham nhũng.</p>
+                     <div class="wu-lpterms__termitem"><span>19. </span><p>Chương trình khuyến mãi tuân thủ tất cả các luật và quy định hiện hành về chống hối lộ và tham nhũng.
+                        © 2024 Stratagile Pte Ltd Mọi quyền được bảo lưu.
+                     </p>
                     </div>
                 </div>
             </div>
