--- a/organisms/lp-terms&conditions.html
+++ b/organisms/lp-terms&conditions.html
@@ -110,7 +110,11 @@
                      <!-- 18 -->
                      <div class="wu-lpterms__termitem"><span>18. </span><p>Stratagile will keep the details in a secure database (AWS hosted). The customer data will not be used for any purpose except winner selection and will not be shared either. If a customer opts out, we will permanently delete the record with no history. We will hand over the data to Western Union for transaction verification purpose and we will delete the data at our end at the end of the pilot period. We will post a detailed online privacy statement and Terms and Conditions attached to the link.</p></div>
                      <!-- 19 -->
-                     <div class="wu-lpterms__termitem"><span>19. </span><p>The promotion is compliant with all applicable anti-bribery and corruption laws and regulations.</p></div>
+                     <div class="wu-lpterms__termitem"><span>19. </span><p>The promotion is compliant with all applicable anti-bribery and corruption laws and regulations.
+                     </p></div>
+                     <div class="wu-lpterms__termitem"><p>
+                        © 2024 Stratagile Pte Ltd All Rights Reserved
+                     </p></div>
                 </div>
             </div>
         </div>
