--- a/organisms/lp-terms-ch_th.html
+++ b/organisms/lp-terms-ch_th.html
@@ -132,14 +132,16 @@
                      <div class="wu-lpterms__termitem"><span>18. </span><p>Stratagile将把详细信息保存在安全数据库中（AWS 托管）。客户数据不会用于除选择获胜者之外的任何目的，也不会共享。如果客户选择退出，我们将永久删除不会保留历史记录。Western Union 仅出于交易验证目的查看数据，不会保留任何副本。我们将在活动结束时删除数据。我们将在链接中发布详细的在线隐私声明和条款和条件。</p>
                     </div>
                      <!-- 19 -->
-                     <div class="wu-lpterms__termitem"><span>19. </span><p>此次促销活动符合所有适用的反贿赂和腐败法律法规。
-                        © 2024 Stratagile Pte Ltd 保留所有权利。
-                        
+                     <div class="wu-lpterms__termitem"><span>19. </span><p>此次促销活动符合所有适用的反贿赂和腐败法律法规。    
                         </p>
-                    </div>
+                </div>
+                <div class="wu-lpterms__termitem"><p>
+                    © 2024 Stratagile Pte Ltd 保留所有权利。    
+                    </p>
                 </div>
             </div>
         </div>
+     </div>
      </div>
     <!-- body content end -->
 
