--- a/organisms/lp-terms-ph-th.html
+++ b/organisms/lp-terms-ph-th.html
@@ -144,8 +144,11 @@
                      <!-- 19 -->
                      <div class="wu-lpterms__termitem"><span>19. </span><p>Ang promosyon ay sumusunod sa lahat ng naaangkop na batas at regulasyon laban sa suhol at korapsyon.
                         © 2024 Stratagile Pte Ltd All Rights Reserved.
-                        
-                    </p>
+                      </p>
+                    </div>
+                    <div class="wu-lpterms__termitem"><p>
+                        © 2024 Stratagile Pte Ltd All Rights Reserved.
+                      </p>
                     </div>
                 </div>
             </div>
