--- a/organisms/lp-terms-thai.html
+++ b/organisms/lp-terms-thai.html
@@ -138,6 +138,10 @@
                         © 2024 Stratagile Pte Ltd สงวนลิขสิทธิ์
                         </p>
                     </div>
+                    <div class="wu-lpterms__termitem"><p>
+                        © 2024 Stratagile Pte Ltd สงวนลิขสิทธิ์
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
