--- a/organisms/lp-terms-vn.html
+++ b/organisms/lp-terms-vn.html
@@ -124,6 +124,9 @@
                     </div>
                      <!-- 19 -->
                      <div class="wu-lpterms__termitem"><span>19. </span><p>Chương trình khuyến mãi tuân thủ tất cả các luật và quy định hiện hành về chống hối lộ và tham nhũng.
+                     </p>
+                    </div>
+                    <div class="wu-lpterms__termitem"><p>
                         © 2024 Stratagile Pte Ltd Mọi quyền được bảo lưu.
                      </p>
                     </div>
