korea-english updated

--- a/organisms/lp-terms-CH-KO.html
+++ b/organisms/lp-terms-CH-KO.html
@@ -19,7 +19,7 @@
      <div class="wu-lpterms">
         <div class="content-wrapper">
             <div class="wu-lpterms__container">
-                <h3 class="wu-title">条款和条件</h3>
+                <h3 class="wu-title">条款和条件 – Western Union新年促销活动 2024</h3>
                 <div class="wu-lpterms__terms">
                     <!-- 1 -->
                     <div class="wu-lpterms__termitem"><span>1. </span><p>有关如何参加和奖品的信息构成本条款和条件的一部分。通过在线注册，参与者同意本条款和条件。</p>
@@ -129,6 +129,7 @@
                      <!-- 19 -->
                      <div class="wu-lpterms__termitem"><span>19. </span><p>本次促销活动符合所有适用的反贿赂和腐败法律法规。</p>
                     </div>
+                    <div class="wu-lpterms__termitem"><p>© 2024 Stratagile Pte Ltd 保留所有权利。</p></div>
                 </div>
             </div>
         </div>
