--- a/organisms/lp-terms-EN_KO.html
+++ b/organisms/lp-terms-EN_KO.html
@@ -19,7 +19,7 @@
      <div class="wu-lpterms">
         <div class="content-wrapper">
             <div class="wu-lpterms__container">
-                <h3 class="wu-title">Terms & Conditions</h3>
+                <h3 class="wu-title">TERMS AND CONDITIONS – LOYALTY CAMPAIGN 2024</h3>
                 <div class="wu-lpterms__terms">
                     <!-- 1 -->
                     <div class="wu-lpterms__termitem"><span>1. </span><p>Information on how to enter and the prizes form part of these Terms and Conditions. By registering online, participants agree to these Terms and Conditions.</p>
@@ -30,7 +30,7 @@
                     <!-- 3 -->
                     <div class="wu-lpterms__termitem"><span>3. </span><p>The promo is open to residents in South Korea aged 18 and above who satisfy the promo requirements outlined in clause 5 below (“Eligible Participants”).</p></div>
                     <!-- 4 -->
-                    <div class="wu-lpterms__termitem"><span>4. </span><p>This Promotion commences at 12:00am (Seoul time) on 15th Dec 2024 and ends on 11:59pm (Seoul time) on 15th March 2025 (“Promotion Period”). and is subject to extension by the Promoter. All transactions made after 11:59pm (Seoul time) on 15th March 2025 will not be accepted and will be considered invalid.</p></div>
+                    <div class="wu-lpterms__termitem"><span>4. </span><p>This Promotion commences at 12:00am (Seoul time) on 18th Dec 2024 and ends on 11:59pm (Seoul time) on 18th March 2025 (“Promotion Period”). and is subject to extension by the Promoter. All transactions made after 11:59pm (Seoul time) on 18th March 2025 will not be accepted and will be considered invalid.</p></div>
                     <!-- 5 -->
                     <div class="wu-lpterms__termitem"><span>5. </span><p>How to enter: Register online  and choose desired prize (select one type only). Successfully send Western Union® Money Transfer in the amount of at least USD 300 from any of Western Union agents/partners at retail locations or online channels in Korea to the Philippines, Vietnam and China during the Promotion Period.</p></div>
                     <!-- 6 -->
@@ -40,12 +40,12 @@
                         <ul>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>4,500 KRW Starbucks Voucher: The first 1,000 customers to complete one qualifying transaction can receive one (1) 4,500 KRW Starbucks voucher, with one win per customer.</p>
+                                    <p>5,000 KRW Olive Young Voucher: The first 1,000 customers to complete one qualifying transaction can receive one (1) 5,000 KRW Olive Young voucher, with one win per customer</p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>10,000 KRW Starbucks Voucher: The first 1,000 customers to complete two qualifying transactions can receive one (1) 10,000 KRW Starbucks voucher, with one win per customer.</p>
+                                    <p>10,000 KRW Olive Young Voucher: The first 1,000 customers to complete two qualifying transactions can receive one (1) 10,000 KRW Olive Young voucher, with one win per customer. </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
@@ -55,15 +55,13 @@
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>The prizes are non-transferrable or not convertible to cash.
-
-                                    </p>
+                                    <p>The prizes are non-transferrable or not convertible to cash.</p>
                                 </div>
                             </li>
                         </ul>
                      </div>
                      <!-- 7 -->
-                     <div class="wu-lpterms__termitem"><span>7. </span><p>In order to claim their entry, an Eligible Participant should log in campaign page and provide the following information to register to the promotion until 15th March 2025.</p></div>
+                     <div class="wu-lpterms__termitem"><span>7. </span><p>In order to claim their entry, an Eligible Participant should log in campaign page and provide the following information to register to the promotion until 18th March 2025.</p></div>
                      <!-- list -->
                      <div class="wu-lpterms__termlistb">
                         <ul>
@@ -76,7 +74,7 @@
                         </ul>
                     </div>
                      <!-- 8 -->
-                     <div class="wu-lpterms__termitem"><span>8. </span><p>The Promoter will take adequate precautions to keep this data private and will not share this with any third party. Neither Western Union or Stratagile Co Ltd will contact the customer for any reason apart from announcing the prizes.</p>
+                     <div class="wu-lpterms__termitem"><span>8. </span><p>The Promoter will take adequate precautions to keep this data private and will not share this with any third party. Neither Western Union or Stratagile Pte Ltd will contact the customer for any reason apart from announcing the prizes.</p>
                     </div>
                      <!-- 9 -->
                      <div class="wu-lpterms__termitem"><span>9. </span><p>The Promoter will be responsible for any matters arising from or in connection with the prizes, services, and/or information they provide. Any enquiry or complaint regarding the prizes, services, and/or information should be directed to the Promoter.</p>
@@ -89,23 +87,23 @@
                         <ul>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>1,000 winners with 4,500 KRW valued Starbucks voucher will be selected by the sequence of date of the 1st transaction.  </p>
+                                    <p>1,000 winners with 5,000 KRW valued Olive Young voucher will be selected by the sequence of date of the 1st transaction. </p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>1,000 winners with 10,000 KRW valued Starbucks voucher will be selected by the sequence of date of the 2nd transaction.</p>
+                                    <p>1,000 winners with 10,000 KRW valued Olive Young voucher will be selected by the sequence of date of the 2nd transaction.</p>
                                 </div>
                             </li>
                             <li class="wu-lpterms__termlistitm">
                                 <div>
-                                    <p>The winners will be notified via callout and registered email provided in the registration form, and the reward will be distributed via sms and email by the Promoter no later than 15th April 2025.</p>
+                                    <p>The winners will be notified via callout and registered email provided in the registration form, and the reward will be distributed via sms and email by the Promoter no later than 30th April 2025.</p>
                                 </div>
                             </li>
                         </ul>
                      </div>
                       <!-- 11 -->
-                      <div class="wu-lpterms__termitem"><span>11. </span><p>Offer valid while stocks last and valid during the Promotion Period. Prizes are provided by a third-party provider, subject to their respective terms and conditions (<a href="https://m.ssg.com/search.ssg?query=스타벅스기프티콘">https://m.ssg.com/search.ssg?query=스타벅스기프티콘</a>; <a href="https://www.coupop.co.kr/goods/mainShop.do?searchBrandNoList=15">https://www.coupop.co.kr/goods/mainShop.do?searchBrandNoList=15</a>)  of the product warranty, in relation to which the Promoter will have no liability whatsoever.</p>
+                      <div class="wu-lpterms__termitem"><span>11. </span><p>Offer valid while stocks last and valid during the Promotion Period. Prizes are provided by a third-party provider, subject to their respective terms and conditions (<a href="https://m.ssg.com/search.ssg?query=Olive%20Young">https://m.ssg.com/search.ssg?query=Olive%20Young</a>)  of the product warranty, in relation to which the Promoter will have no liability whatsoever.</p>
                     </div>
                      <!-- 12 -->
                      <div class="wu-lpterms__termitem"><span>12. </span><p>Winners shall be responsible for any tax arising for winning the prize. The prizes are provided by a third party and will be responsible for any matters arising from or in connection with the prizes, services, and/or information they provide in relation to which the Promoter will have no liability whatsoever. Any enquiry or complaint regarding the prizes, services, and/or information should be directed to the third party. The Promoter will not be held liable for prizes that do not reach winners expectations and to the quality and availability of the prizes, services and information provided by the third-party provider, and excludes liability in connection with the Promotion once the winner(s) enjoys any benefit relating to the Promotion of the full extent permitted by law.</p>
@@ -120,7 +118,7 @@
                     <div class="wu-lpterms__termitem"><span>15. </span><p>To the extent that there is any inconsistency between these terms and conditions and other marketing materials or collateral produced in relation to this Promotion, these terms and conditions will prevail.</p>
                     </div> 
                     <!-- 16 -->
-                    <div class="wu-lpterms__termitem"><span>16. </span><p>For any further clarification and complaints, you can reach out to Stratagile Pte Ltd (“Promoter”) at: (local support number to be set up later)</p>
+                    <div class="wu-lpterms__termitem"><span>16. </span><p>For any further clarification and complaints, you can reach out to Stratagile Pte Ltd (“Promoter”) at: <a href="tel:+821082493137">+821082493137</a></p>
                     </div>
                     <!-- 17 -->
                     <div class="wu-lpterms__termitem"><span>17. </span><p>Acceptance of any prize, benefit and/or offer provided by the Promoter will be deemed as consent by the winner(s) to take part in any related publicity and using their name, likeness, image and/or voice for advertising and other promotional purposes without compensation, except as otherwise prohibited by any applicable law.</p>
@@ -131,6 +129,7 @@
                      <!-- 19 -->
                      <div class="wu-lpterms__termitem"><span>19. </span><p>The promotion is compliant with all applicable anti-bribery and corruption laws and regulations.</p>
                     </div>
+                    <div class="wu-lpterms__termitem"><p>© 2024 Stratagile Pte Ltd All Rights Reserved.</p></div>
                 </div>
             </div>
         </div>
