--- a/organisms/lp-terms-ph-th.html
+++ b/organisms/lp-terms-ph-th.html
@@ -19,7 +19,7 @@
      <div class="wu-lpterms">
         <div class="content-wrapper">
             <div class="wu-lpterms__container">
-                <h3 class="wu-title">"TERMS AND CONDITIONS – KAMPANYA NG LOYALTY 2024"</h3>
+                <h3 class="wu-title">TERMS AND CONDITIONS – KAMPANYA NG LOYALTY 2024</h3>
                 <div class="wu-lpterms__terms">
                     <!-- 1 -->
                     <div class="wu-lpterms__termitem"><span>1. </span><p>Ang impormasyon kung paano sumali at ang mga premyo ay bahagi ng mga Terms and Conditions na ito. Sa pagrehistro online, ang mga kalahok ay sumasang-ayon sa mga Terms and Conditions na ito.</p>
